--- a/scss/partials/_explore.scss
+++ b/scss/partials/_explore.scss
@@ -2,8 +2,12 @@
   background-color: #e0f2fe;
   div {
     padding: 3rem;
+    .main-explore-main-text {
+      color: #023e8a;
+    }
   }
   h1 {
+    color: #023e8a;
     text-align: center;
   }
   p {
@@ -12,13 +16,15 @@
   button {
     display: block;
     margin: 0 auto;
-    height: 2rem;
+    height: 2.5rem;
     border-radius: 9px;
     width: auto;
     padding: 0 0.5rem;
     background-color: #ee9b00;
     color: #fff;
     border: none;
+    font-size: 1.2rem;
+    font-weight: 500;
     &:hover {
       background-color: #fff;
       color: #ee9b00;
