--- a/scss/partials/_how_it_works.scss
+++ b/scss/partials/_how_it_works.scss
@@ -24,6 +24,43 @@
       font-size: 2rem;
       font-weight: 600;
     }
+    div {
+      .img-container {
+        position: relative;
+        @keyframes gradientAnimation {
+          0% {
+            transform: translate(-45%, -50%) scale(1.05);
+            animation-timing-function: ease-in-out;
+          }
+          50% {
+            transform: translate(-45%, -50%) scale(1);
+            animation-timing-function: ease-in-out;
+          }
+          100% {
+            transform: translate(-45%, -50%) scale(1.05);
+            animation-timing-function: ease-in-out;
+          }
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-45%, -50%);
+          width: 60%;
+          height: 80%;
+          border-radius: 50%;
+          background: radial-gradient(
+            circle,
+            rgba(0, 0, 0, 7) 0%,
+            rgba(0, 0, 0, 0.3) 60%,
+            rgba(0, 0, 0, 0.1) 50%
+          );
+          pointer-events: none;
+          animation: gradientAnimation 2s infinite;
+        }
+      }
+    }
   }
 }
 
