--- a/scss/partials/_pricing.scss
+++ b/scss/partials/_pricing.scss
@@ -6,8 +6,7 @@
   padding: 1rem 15rem 5rem;
   .pricing-title {
     padding-top: 0%;
-    margin: 1rem;
-    font-size: 1.2rem;
+    margin: 1rem auto 2rem;
     text-align: center;
     color: #e0f2fe;
   }
@@ -17,84 +16,122 @@
     align-items: center;
     gap: 4rem;
     min-width: 0;
-    .pricing-item {
+    .pricing-item-parent {
       height: 28rem;
       width: 40%;
-      background-color: #e0f2fe;
-      border: 1px solid #e0f2fe;
-      border-radius: 9px;
-      overflow: hidden;
-      transition: box-shadow 0.3s ease;
-      &:hover {
-        box-shadow: 0 0 1rem rgb(224, 242, 254, 0.8);
-      }
-      .pricing-item-title {
-        background-color: #0077b6;
-        background-color: #023e8a;
-        color: #e0f2fe;
-        height: 5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 32px;
-        p {
-          padding: 0;
-          margin: 0;
+      position: relative;
+      .star {
+        --star-color: #eec200;
+        --sqrt-3: 1.73205080757;
+        overflow: visible;
+        margin: 0 auto;
+        top: -1.1em;
+        right: -1em;
+        font-size: 2em;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-left: 1em solid transparent;
+        border-right: 1em solid transparent;
+        border-bottom: calc(1em * var(--sqrt-3)) solid var(--star-color);
+        &:after {
+          content: "";
+          position: absolute;
+          width: 0;
+          height: 0;
+          left: -1em;
+          top: calc(1em * var(--sqrt-3) / 3);
+          border-left: 1em solid transparent;
+          border-right: 1em solid transparent;
+          border-top: calc(1em * var(--sqrt-3)) solid var(--star-color);
         }
       }
-      .pricing-item-info {
-        p {
-          text-align: center;
-          padding-top: 0;
-          margin-top: 0;
+      .word {
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(50%, -50%);
+        font-size: 1em;
+        font-weight: bold;
+        font-family: "Inter";
+      }
+      .pricing-item {
+        background-color: #e0f2fe;
+        border: 1px solid #e0f2fe;
+        border-radius: 9px;
+        overflow: hidden;
+        transition: box-shadow 0.3s ease;
+
+        &:hover {
+          box-shadow: 0 0 1rem rgb(224, 242, 254, 0.8);
         }
-        .pricing-item-price {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 5rem;
-          .pricing-item-price-sign {
-            font-size: 1.5rem;
-          }
-          .pricing-item-price-number {
-            font-size: 3rem;
-            font-weight: 800;
-          }
-        }
-        .pricing-item-info-advantages {
-          height: 11rem;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          padding: 0 1.5rem;
-          .pricing-item-info-advantage {
-            display: flex;
-            align-items: center;
-            p {
-              padding: auto 0;
-              margin: auto 0;
-            }
-            .icon-pricing {
-              width: 2rem;
-              margin: auto 1rem;
-            }
-          }
-        }
-        button {
-          height: 3rem;
-          background-color: #ee9b00;
+        .pricing-item-title {
+          background-color: #023e8a;
           color: #e0f2fe;
-          display: block;
-          width: 12rem;
-          margin: 1rem auto;
-          border-radius: 9px;
-          border: none;
-          font-size: 1.3rem;
-          &:hover {
-            background-color: #e0f2fe;
-            color: #ee9b00;
-            border: 1px solid #ee9b00;
-            cursor: pointer;
+          height: 5rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 32px;
+          p {
+            padding: 0;
+            margin: 0;
+          }
+        }
+        .pricing-item-info {
+          p {
+            text-align: center;
+            padding-top: 0;
+            margin-top: 0;
+          }
+          .pricing-item-price {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 5rem;
+            .pricing-item-price-sign {
+              font-size: 1.5rem;
+            }
+            .pricing-item-price-number {
+              font-size: 3rem;
+              font-weight: 800;
+            }
+          }
+          .pricing-item-info-advantages {
+            height: 11rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            padding: 0 1.5rem;
+            .pricing-item-info-advantage {
+              display: flex;
+              align-items: center;
+              p {
+                padding: auto 0;
+                margin: auto 0;
+              }
+              .icon-pricing {
+                width: 2rem;
+                margin: auto 1rem;
+              }
+            }
+          }
+          button {
+            height: 3rem;
+            background-color: #ee9b00;
+            color: #e0f2fe;
+            display: block;
+            width: 12rem;
+            margin: 1rem auto;
+            border-radius: 9px;
+            border: none;
+            font-size: 1.3rem;
+            &:hover {
+              background-color: #e0f2fe;
+              color: #ee9b00;
+              border: 1px solid #ee9b00;
+              cursor: pointer;
+            }
           }
         }
       }
@@ -108,7 +145,7 @@
     height: 100%;
     .pricing-container {
       flex-direction: column;
-      .pricing-item {
+      .pricing-item-parent {
         width: 95%;
       }
     }
