--- a/scss/partials/_pricing.scss
+++ b/scss/partials/_pricing.scss
@@ -1,6 +1,8 @@
+@import "variables";
+
 #pricing {
-  border-top: 2px solid #fff;
-  background: linear-gradient(to bottom right, #023e8a, #0096c7);
+  border-top: 2px solid $white;
+  background: linear-gradient(to bottom right, $blue-dark, $blue-dark-light);
   max-width: 100vw;
   height: 100vh;
   padding: 1rem 15rem 5rem;
@@ -8,7 +10,7 @@
     padding-top: 0%;
     margin: 1rem auto 2rem;
     text-align: center;
-    color: #e0f2fe;
+    color: $blue-light-3;
   }
   .pricing-container {
     display: flex;
@@ -56,8 +58,8 @@
         font-family: "Inter";
       }
       .pricing-item {
-        background-color: #e0f2fe;
-        border: 1px solid #e0f2fe;
+        background-color: $blue-light-3;
+        border: 1px solid $blue-light-3;
         border-radius: 9px;
         overflow: hidden;
         transition: box-shadow 0.3s ease;
@@ -66,8 +68,8 @@
           box-shadow: 0 0 1rem rgb(224, 242, 254, 0.8);
         }
         .pricing-item-title {
-          background-color: #023e8a;
-          color: #e0f2fe;
+          background-color: $blue-dark;
+          color: $blue-light-3;
           height: 5rem;
           display: flex;
           align-items: center;
@@ -118,8 +120,8 @@
           }
           button {
             height: 3rem;
-            background-color: #ee9b00;
-            color: #e0f2fe;
+            background-color: $yellow;
+            color: $blue-light-3;
             display: block;
             width: 12rem;
             margin: 1rem auto;
@@ -127,9 +129,9 @@
             border: none;
             font-size: 1.3rem;
             &:hover {
-              background-color: #e0f2fe;
-              color: #ee9b00;
-              border: 1px solid #ee9b00;
+              background-color: $blue-light-3;
+              color: $yellow;
+              border: 1px solid $yellow;
               cursor: pointer;
             }
           }
