--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body .main {
   }
   .header .header-nav .btn-mobile-nav i[name=menu-outline] {
     display: block;
-    color: #e0f2fe;
+    color: #ade8f4;
   }
   .header .header-nav .btn-mobile-nav i[name=close-outline] {
     display: none;
@@ -126,7 +126,7 @@ body .main {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #e0f2fe;
+    background-color: #ade8f4;
     color: #03045e;
     width: 100%;
     height: 100vh;
@@ -373,7 +373,7 @@ body .main {
 }
 .body-form .main-form {
   font-family: Tahoma;
-  color: white;
+  color: #fff;
   width: 40rem;
   max-width: 90%;
   margin: 1rem auto;
@@ -471,7 +471,7 @@ body .main {
   background-color: #ee9b00;
   color: #fff;
   border-radius: 9px;
-  border: 1px solid white;
+  border: 1px solid #fff;
   height: 2.5rem;
   font-size: inherit;
   font-family: inherit;
