--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,7 +1,9 @@
+@import "variables";
+
 .header {
   height: 5rem;
-  background-color: #03045e;
-  color: #fff;
+  background-color: $blue-extra-dark;
+  color: $white;
   padding: 1rem;
 
   .header-nav {
@@ -32,31 +34,31 @@
         align-items: center;
         border-radius: 9px;
         a:hover {
-          color: #ade8f4;
+          color: $blue-light;
           text-decoration: underline;
         }
 
         &:last-of-type {
-          background-color: #ee9b00;
+          background-color: $yellow;
           margin: 0.3rem;
           padding: 0 0.8rem;
           border-radius: 9px;
           overflow: hidden;
           a:hover {
-            color: #ee9b00;
+            color: $yellow;
             text-decoration: none;
           }
         }
         &:last-of-type {
           &:hover {
-            background-color: #fff;
-            color: #ee9b00;
+            background-color: $white;
+            color: $yellow;
             cursor: pointer;
           }
           &:focus,
           &:active {
             outline: none;
-            box-shadow: 0 0 0 0.8rem rgb(238, 155, 0, 0.5);
+            box-shadow: 0 0 0 0.8rem $yellow-transparent;
           }
         }
         a {
@@ -67,7 +69,7 @@
           &:not(.no-focus):focus,
           &:not(.no-focus):active {
             outline: none;
-            box-shadow: 0 0 0 0.8rem rgb(173, 232, 244, 0.5);
+            box-shadow: 0 0 0 0.8rem $blue-light-transparent;
             border-radius: 4px;
           }
         }
@@ -100,7 +102,7 @@
         padding-top: 0;
         i[name="menu-outline"] {
           display: block;
-          color: #e0f2fe;
+          color: $blue-light;
         }
         i[name="close-outline"] {
           display: none;
@@ -108,7 +110,7 @@
       }
       li:last-of-type {
         height: 3rem;
-        color: #fff;
+        color: $white;
         font-weight: 500;
       }
     }
@@ -119,8 +121,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: #e0f2fe;
-        color: #03045e;
+        background-color: $blue-light;
+        color: $blue-extra-dark;
         width: 100%;
         height: 100vh;
         flex-direction: column;
