--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -102,7 +102,7 @@
         padding-top: 0;
         i[name="menu-outline"] {
           display: block;
-          color: $blue-light;
+          color: $blue-light-3;
         }
         i[name="close-outline"] {
           display: none;
@@ -121,7 +121,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: $blue-light;
+        background-color: $blue-light-3;
         color: $blue-extra-dark;
         width: 100%;
         height: 100vh;
